[workspace]
members = [
    "programs/*",
    "sdk",
    "cli",
]
exclude = ["ts"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.28"
anchor-spl = { version = "0.28", default-features = false, features = ["mint", "token", "associated_token"] }
anyhow = "1"
bytemuck = "1.13"
chrono = { version = "0.4" }
gfx-ssl-v2-interface = { path = "programs/gfx-ssl-v2", features = ["no-entrypoint"] }
num-traits = "0.2"
pyo3 = { version = "0.19", features = ["extension-module"] }
pyth-sdk-solana = "0.8"
rust_decimal = { version = "1", features = ["maths"] }
serde = { version  ="1", features = ["derive"] }
serde_json = "1"
solana-client = "1.16"
solana-sdk = "1.16"
switchboard-v2 = "=0.1.22"
thiserror = "1"
toml_datetime = "=0.6.1"
uuid = { version = "1", features = ["serde", "v4"] }
winnow = "=0.4.1"
