[workspace]
members = [
    "programs/*",
    "sdk",
    # "cli",
    "jupiter",
    "quote_check"
]
exclude = ["ts"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.28"
anchor-spl = { version = "0.28", default-features = false, features = ["mint", "token", "associated_token"] }
anyhow = "1"
base64 = "0.21"
bincode = "1"
bytemuck = "1.13"
chrono = { version = "0.4" }
clap = { version = "~4.1", features = ["derive", "env"] }
fehler = "1"
hyper = { version = "0.14", features = ["server", "http2"] }
itertools = "0.12"
jupiter-amm-interface = { version = "0.3.0" }
num-traits = "0.2"
once_cell = "1"
prometheus = "0.13"
pyo3 = { version = "0.19", features = ["extension-module"] }
pyth-sdk-solana = "0.8"
rust_decimal = { version = "1", features = ["maths", "c-repr"] }
serde = { version  ="1", features = ["derive"] }
serde_json = "1"
solana-account-decoder = "~1.16"
solana-bpf-simulator = { git = "https://github.com/dovahcrow/solana-bpf-simulator" }
# solana-bpf-simulator = { path = "../../solana/simulator" }
solana-client = "~1.16"
solana-client-async = { git = "https://github.com/dovahcrow/solana-client-async" }
solana-program-runtime = "~1.16"
solana-sdk = "~1.16"
spl-associated-token-account = "2"
spl-token = "4"
switchboard-v2 = "=0.1.22"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml_datetime = "=0.6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
winnow = "=0.4.1"
zstd = "0.11"

gfx-ssl-v2-interface = { path = "programs/gfx-ssl-v2", features = ["no-entrypoint"] }
gfx-ssl-v2-jupiter = { path = "jupiter" }
gfx-ssl-v2-sdk = { path = "sdk" }

[patch.crates-io]
# solana_rbpf = { path = "../../solana/rbpf" }
