[package]
name = "gfx-ssl-v2-quote-check"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
zstd = { workspace = true }
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
bytemuck = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
fehler = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
gfx-ssl-v2-sdk = { workspace = true }
jupiter-amm-interface = { workspace = true }
once_cell = { workspace = true }
prometheus = { workspace = true }
rust_decimal = { workspace = true }
solana-bpf-simulator = { workspace = true }
solana-sdk = { workspace = true }
solana-program-runtime = { workspace = true }
solana-client-async = { workspace = true }
solana-account-decoder = { workspace = true }
spl-token = { workspace = true }
spl-associated-token-account = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
solana-client = { workspace = true }
url = { workspace = true }
gfx-ssl-v2-jupiter = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
