[package]
name = "gfx-ssl-v2-sdk"
version = "0.2.0"
edition = "2021"

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
anyhow = { workspace = true }
gfx-ssl-v2-interface = { workspace = true }
rust_decimal = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
