[package]
name = "gfx-ssl-v2-interface"
version = "0.2.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = ["serde", "serde_json", "rust_decimal/serde_json", "chrono"]
python = ["pyo3"]
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
debug-msg = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bytemuck = { workspace = true }
num-traits = { workspace = true }
pyth-sdk-solana = { workspace = true }
rust_decimal = { workspace = true }
switchboard-v2 = { workspace = true }

chrono = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
serde = { workspace = true, optional = true  }
serde_json = { workspace = true, optional = true  }

[dev-dependencies]
# The dependencies below are to maintain compatibility with anchor build commands
# which force an older compiler version
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml_datetime = { workspace = true }
uuid = { workspace = true }
winnow = { workspace = true }
